tests/compiler/jsxArbitraryExprInAttribute/index.tsx
<Foo bar=bar() />
//~^ ERROR: '{' or JSX element expected.
//~| ERROR: Expected '\'.
//~| ERROR: Expected '>'.
//~| ERROR: Expression expected.
//~| ERROR: Expression expected.
//~ ERROR: Expression expected.